--- a/Ruby/.obsidian/app.json
+++ b/Ruby/.obsidian/app.json
@@ -1,3 +1,7 @@
 {
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "tabSize": 4,
+  "spellcheck": false,
+  "showLineNumber": false,
+  "vimMode": true
 }
