--- a/Emerald/emerald/.obsidian/appearance.json
+++ b/Emerald/emerald/.obsidian/appearance.json
@@ -1,8 +1,9 @@
 {
-  "cssTheme": "Shimmering Focus",
+  "cssTheme": "Solarized",
   "textFontFamily": "Cantarell",
   "theme": "moonstone",
   "interfaceFontFamily": "Baskerville",
-  "baseFontSize": 15,
-  "baseFontSizeAction": true
+  "baseFontSize": 21,
+  "baseFontSizeAction": true,
+  "nativeMenus": true
 }
