--- a/Emerald/emerald/.obsidian/appearance.json
+++ b/Emerald/emerald/.obsidian/appearance.json
@@ -1,9 +1,9 @@
 {
-  "cssTheme": "Solarized",
+  "cssTheme": "Sanctum",
   "textFontFamily": "Cantarell",
   "theme": "moonstone",
   "interfaceFontFamily": "Baskerville",
-  "baseFontSize": 21,
+  "baseFontSize": 15,
   "baseFontSizeAction": true,
   "nativeMenus": true
 }
