--- a/Ruby/.obsidian/appearance.json
+++ b/Ruby/.obsidian/appearance.json
@@ -1,3 +1,6 @@
 {
-  "cssTheme": "Blue Topaz"
+  "cssTheme": "Blue Topaz",
+  "interfaceFontFamily": "Cantarell",
+  "monospaceFontFamily": "Fira Code",
+  "textFontFamily": ""
 }
