--- a/Ruby/.obsidian/appearance.json
+++ b/Ruby/.obsidian/appearance.json
@@ -2,5 +2,7 @@
   "cssTheme": "Blue Topaz",
   "interfaceFontFamily": "Cantarell",
   "monospaceFontFamily": "Fira Code",
-  "textFontFamily": ""
+  "textFontFamily": "",
+  "baseFontSizeAction": true,
+  "baseFontSize": 14
 }
