--- a/Ruby/.obsidian/appearance.json
+++ b/Ruby/.obsidian/appearance.json
@@ -1,8 +1,8 @@
 {
-  "cssTheme": "Shimmering Focus",
+  "cssTheme": "Sanctum",
   "interfaceFontFamily": "Cantarell",
   "monospaceFontFamily": "FiraCode Nerd Font Mono",
   "textFontFamily": "",
   "baseFontSizeAction": true,
-  "baseFontSize": 16
+  "baseFontSize": 14
 }
