--- a/Ruby/.obsidian/appearance.json
+++ b/Ruby/.obsidian/appearance.json
@@ -4,5 +4,8 @@
   "monospaceFontFamily": "FiraCode Nerd Font Mono",
   "textFontFamily": "",
   "baseFontSizeAction": true,
-  "baseFontSize": 14
+  "baseFontSize": 14,
+  "enabledCssSnippets": [
+    "remove_folder_icon"
+  ]
 }
