--- a/Emerald/emerald/.obsidian/appearance.json
+++ b/Emerald/emerald/.obsidian/appearance.json
@@ -1,9 +1,9 @@
 {
-  "cssTheme": "AnuPpuccin",
+  "cssTheme": "PLN",
   "textFontFamily": "Cantarell",
-  "theme": "moonstone",
+  "theme": "system",
   "interfaceFontFamily": "Baskerville",
-  "baseFontSize": 16,
+  "baseFontSize": 17,
   "baseFontSizeAction": true,
   "nativeMenus": true,
   "monospaceFontFamily": "FiraCode Nerd Font",
