--- a/Ruby/.obsidian/appearance.json
+++ b/Ruby/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
-  "cssTheme": "Blue Topaz",
+  "cssTheme": "AnuPpuccin",
   "interfaceFontFamily": "Cantarell",
   "monospaceFontFamily": "FiraCode Nerd Font Mono",
   "textFontFamily": "",
@@ -13,5 +13,5 @@
   ],
   "showViewHeader": true,
   "accentColor": "#ff751a",
-  "theme": "moonstone"
+  "theme": "obsidian"
 }
